Add big number section
Use includes to format the code

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@ layout: default
   </div>
 </div>
 
+{% for big in site.big_numbers %}
+  {% include big.html %}
+{% endfor %}
+
 {% for post in site.posts %}
   <div id="{{post.href}}" class="section-block">
     {{post.content}}
