Update styles to match convention of existing
Also add social media.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ layout: default
   <h1>{{ site.title }}</h1>
   <p class="lead">{{ site.about.description }}</p>
   <p class="small">{{ site.about.label }}: {{ site.timestamp }}</p>
+  {% include social.html %}
 </div> <!-- About -->
 
 <div class="infographic clearfix">
